Feat: Add configuration for selecting Keymaster
Add configuration options for selecting the Keymaster lock to work with.

Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/custom_components/rental_control/manifest.json
+++ b/custom_components/rental_control/manifest.json
@@ -3,7 +3,7 @@
   "name": "Rental Control",
   "documentation": "https://github.com/tykeal/rental-control",
   "issue_tracker": "https://github.com/tykeal/rental-control/issues",
-  "dependencies": [],
+  "dependencies": ["keymaster"],
   "config_flow": true,
   "codeowners": ["@tykeal"],
   "requirements": ["icalendar==4.0.7"],
