CI: Update release-drafter template
Add in documentation labels under Maintenance

Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -21,8 +21,9 @@ categories:
   - title: ":wrench: Maintenance :wrench:"
     labels:
       - "chore"
-      - "repo"
+      - "documentation"
       - "maintenance"
+      - "repo"
   - title: ":mortar_board: Code Quality :mortar_board:"
     labels:
       - "code-quality"
