--- a/custom_components/rental_control/manifest.json
+++ b/custom_components/rental_control/manifest.json
@@ -4,6 +4,7 @@
   "documentation": "https://github.com/tykeal/rental-control",
   "issue_tracker": "https://github.com/tykeal/rental-control/issues",
   "dependencies": [],
+  "after_dependencies": ["keymaster"],
   "config_flow": true,
   "codeowners": ["@tykeal"],
   "requirements": ["icalendar==4.0.7"],
