Chore: Update upload-release-action to v2
Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,7 +28,7 @@ jobs:
           cd ${{ github.workspace }}/custom_components/rental_control
           zip rental_control.zip -r ./
       - name: Upload zip to release
-        uses: svenstaro/upload-release-action@v1-release
+        uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           # yamllint disable-line rule:line-length
