--- a/custom_components/rental_control/manifest.json
+++ b/custom_components/rental_control/manifest.json
@@ -6,6 +6,7 @@
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/tykeal/homeassistant-rental-control",
+  "integration_type": "service",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/tykeal/homeassistant-rental-control/issues",
   "requirements": ["icalendar==5.0.7"],
