Chore: Update GitHub Actions to latest versions
Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/.github/workflows/gitlint.yaml
+++ b/.github/workflows/gitlint.yaml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4.1.4
         with:
           # Check out at the last commit (pre-automated merge, we don't care
           # about the temporary commit for linting)
