--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
       - id: gitlint
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: f8a3f8c471fb698229face5ed7640a64900b781e  # frozen: v0.4.4
+    rev: f8a3f8c471fb698229face5ed7640a64900b781e # frozen: v0.4.4
     hooks:
       - id: ruff
         files: ^(scripts|tests|custom_components)/.+\.py$
@@ -58,7 +58,13 @@ repos:
         additional_dependencies:
           - types-pytz
 
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: f12edd9c7be1c20cfa42420fd0e6df71e42b51ea # frozen: v4.0.0-alpha.8
+    hooks:
+      - id: prettier
+        stages: [commit]
+
   - repo: https://github.com/rhysd/actionlint
-    rev: f970a14472c1b4d576f8456884a3238aa353a288  # frozen: v1.7.0
+    rev: f970a14472c1b4d576f8456884a3238aa353a288 # frozen: v1.7.0
     hooks:
       - id: actionlint
