Chore: Add SPDX headers to all files
Configure SPDX headers in all files along with adding the needed license
text.

Configure the reuse tool to validate all license and copyright headers
exist and are correct.

Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2021 Andrew Grimberg <tykeal@bardicgrove.org>
+# SPDX-License-Identifier: Apache-2.0
+
 root = true
 
 [*]
