--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,2 +1,5 @@
+# SPDX-FileCopyrightText: 2021 Andrew Grimberg <tykeal@bardicgrove.org>
+# SPDX-License-Identifier: Apache-2.0
+
 -r requirements.txt
 homeassistant
