--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Andrew Grimberg <tykeal@bardicgrove.org>
+#
+# SPDX-License-Identifier: Apache-2.0
+
 __pycache__
 pythonenv*
 .python-version
