--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,5 @@
+# SPDX-License-Identifier: Apache-2.0
+# SPDX-FileCopyrightText: 2021 Andrew Grimberg <tykeal@bardicgrove.org>
 [mypy]
 warn_return_any = True
 warn_unused_configs = True
