Fix!: Cleanup mypy errors
Home Assistant 2024.5 introduced changes that caused mypy to start
throwing new errors along with newer versions of mypy.

Requires Home Assistant 2024.5.0 or newer.

Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/mypy.ini
+++ b/mypy.ini
@@ -12,3 +12,6 @@ ignore_missing_imports = True
 
 [mypy-icalendar.*]
 ignore_missing_imports = True
+
+[mypy-x_wr_timezone.*]
+ignore_missing_imports = True
