--- a/custom_components/rental_control/manifest.json
+++ b/custom_components/rental_control/manifest.json
@@ -9,6 +9,6 @@
   "integration_type": "service",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/tykeal/homeassistant-rental-control/issues",
-  "requirements": ["icalendar", "x-wr-timezone"],
+  "requirements": ["icalendar>=6.1.0", "x-wr-timezone>=2.0.0"],
   "version": "v0.0.0"
 }
