Chore: Initialize spec-kit
Prepare to use spec-kit for further development of the Rental Control
integration.

Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -17,3 +17,9 @@ path = "tests/__pycache__/**"
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2021 Andrew Grimberg <tykeal@bardicgrove.org>"
 SPDX-License-Identifier = "Apache-2.0"
+
+[[annotations]]
+path = [".specify/**", ".github/*/speckit.**", ".vscode/**"]
+precedence = "aggregate"
+SPDX-FileCopyrightText = "2021 Andrew Grimberg <tykeal@bardicgrove.org>"
+SPDX-License-Identifier = "MIT"
