Build: migrate to uv-managed environment
Convert project to modern uv-based package management:
- Consolidate requirements*.txt into pyproject.toml dependencies
- Migrate setup.cfg and mypy.ini to pyproject.toml tool sections
- Generate uv.lock for reproducible builds (303 packages resolved)
- Add UV_USAGE.md documentation for developers
- Configure Hatchling build system
- Set Python 3.11+ as minimum version
- Update REUSE.toml to annotate uv.lock
- Exclude uv.lock from large file checks in pre-commit

This enables modern Python development workflow with faster
dependency resolution and reproducible environments.

Co-Authored-By: SpecKit Plan Agent <speckit@copilot.local>
Signed-off-by: Andrew Grimberg <tykeal@bardicgrove.org>

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -23,3 +23,9 @@ path = [".specify/**", ".github/*/speckit.**", ".vscode/**"]
 precedence = "aggregate"
 SPDX-FileCopyrightText = "2021 Andrew Grimberg <tykeal@bardicgrove.org>"
 SPDX-License-Identifier = "MIT"
+
+[[annotations]]
+path = "uv.lock"
+precedence = "aggregate"
+SPDX-FileCopyrightText = "2021 Andrew Grimberg <tykeal@bardicgrove.org>"
+SPDX-License-Identifier = "Apache-2.0"
