--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,8 @@ repos:
     rev: 3e8a8703264a2f4a69428a0aa4dcb512790b2c8c  # frozen: v6.0.0
     hooks:
       - id: check-added-large-files
+        args: ['--maxkb=2000', '--enforce-all']
+        exclude: '^uv\.lock$'
       - id: check-ast
       - id: check-json
       - id: check-merge-conflict
